[tool.poetry]
name = "temps"
version = "0.1.0"
description = "Monitor CPU, GPU & other temperatures"
authors = ["PyryL <pyry@pyry.info>"]
license = "Proprietary"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9,<3.12"


[tool.poetry.group.dev.dependencies]
pyinstaller = "^5.10.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
